--- a/index.html
+++ b/index.html
@@ -433,15 +433,13 @@
                     <span class="nohighlight">(source)</span>
                 </a>
             </div>
-            <!--
             <div class="col-3">
                 <h4>Reach out —</h4>
                 <h5>Opportunities</h5>
-                <a class="reach-link" href="mailto:eric__1234@outlook.com" style="margin-bottom: 10px;">eric__1234@outlook.com</a>
+                <a class="reach-link" href="mailto:eric__1234@outlook.com" style="margin-bottom: 10px;">Email</a>
                 <br>
-                <a class="reach-link" href="https://www.linkedin.com/in/ericl816/" target="_blank" rel="noopener">linked.com/in/ericl816</a>
+                <a class="reach-link" href="https://www.linkedin.com/in/ericl816/" target="_blank" rel="noopener">LinkedIn</a>
             </div>
-            -->
         </div>
     </div>
 
