--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Eric Liu is a Junior UW CS student from Waterloo, Canada with a passion for technology, development and entrepreneurship.">
     <meta name="keywords" content="eric, liu, ericl816, programming, portfolio, student, developer, waterloo, uw, cs, competitive-programming, internship, computer, science, linkedin, software, engineering, startups, work, experience, website">
     <meta name="author" content="Eric Liu">
+    <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
